# gitopsd

./: INTEGRATIONS.md  INTEROP.md  README.md  pyproject.toml
demos/01-basic/: SCENARIO.md  live-snapshot.json
demos/01-basic/desired/: app.yaml
docs/: USAGE.md
examples/: help.txt  version.txt
gitopsd/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_deep.py  test_features.py  test_smoke.py
