[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-gitopsd"
version = "0.1.0"
description = "GitOps drift detection — diff declared manifests against live cluster state"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "gitops", "kubernetes", "drift-detection", "devsecops", "cli", "self-hosted", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/gitopsd"

[project.scripts]
gitopsd = "gitopsd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gitopsd"]
